src/test/test-models/good/fun_as_stmt.stan
functions {
  void foo_lp() {
    
  }
}
model {
  foo_lp();
}

