src/test/test-models/bad/reserved/corr_matrix.stan
data {
  real corr_matrix;
}
model {
}
